--- a/hugo.toml
+++ b/hugo.toml
@@ -50,8 +50,8 @@ utterancesRepo = "g1eny0ung/g1eny0ung.github.io"
 # LEANCLOUD_APP_ID = ""
 # LEANCLOUD_APP_KEY = ""
 
-# waline = true
-# walineServer = ""
+waline = true
+walineServer = "https://googhub.nyc.mn/"
 
 email = "aiedu985@gmail.com"
 
