--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -83,3 +83,6 @@ collections:
       - label: 'Body'
         name: 'body'
         widget: 'markdown'
+  - name: 'blog'
+    label: 'Blog'
+    pageRefer: 'https://www.googhub.nyc.mn'
