--- a/hugo.toml
+++ b/hugo.toml
@@ -65,7 +65,7 @@ customSyntaxHighlighting = true
 
 # options
 stickyNav = true
-reorderNavItems = ["blog", "about", "search", "github", "posts", "categories", "tags", "rss"]
+reorderNavItems = ["about", "search", "github", "posts", "categories", "tags", "rss"]
 collapseNavItems = ["posts", "categories", "tags", "rss"]
 # noDefaultSummaryCover = true
 showTableOfContents = true
