--- a/hugo.toml
+++ b/hugo.toml
@@ -14,15 +14,20 @@ hasCJKLanguage = true
 wrapStandAloneImageWithinParagraph = false
 [markup.goldmark.parser.attribute]
 block = true
+
 [markup.goldmark.renderer]
 unsafe = true
+
 [markup.goldmark.extensions.passthrough]
 enable = true
+
 [markup.goldmark.extensions.passthrough.delimiters]
 block = [['\[', '\]'], ['$$', '$$']]
 inline = [['\(', '\)'], ['$', '$']]
+
 [markup.highlight]
-noClasses = false
+# noClasses = false
+style = 'manni'
 
 # [taxonomies]
 # category = "categories"
