--- a/hugo.toml
+++ b/hugo.toml
@@ -78,7 +78,7 @@ stickyNav = true
 reorderNavItems = ["about", "search", "github", "posts", "categories", "tags", "rss"]
 collapseNavItems = ["posts", "categories", "tags", "rss"]
 # noDefaultSummaryCover = true
-showTableOfContents = false
+showTableOfContents = true
 showSummaryCoverInPost = true
 imageZoomableInPost = true
 showPrevNextPost = true
