🗂️ 优化.gitignore：移除Hugo生成文件和临时文件
✅ 新增忽略规则：
• public/ - Hugo生成的静态文件目录
• hexo/ - 旧Hexo备份目录
• resources/_gen/ - Hugo资源缓存
• *.tmp, *.temp - 临时文件
• test-glassmorphism.html - 测试文件
• .hugo_build.lock - Hugo构建锁文件
• VS Code配置文件

🧹 清理仓库：
• 从Git跟踪中移除48个public/目录文件
• 保持仓库整洁，只跟踪源码文件
• Hugo生成的文件将自动被忽略

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,41 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# =====================================
+# Hugo Static Site Generator
+# =====================================
+
+# Generated public files (Hugo output)
+public/
+# Hugo resources
+resources/_gen/
+
+# =====================================
+# Project Specific Ignores
+# =====================================
+
+# Old Hexo backup directory
+hexo/
+
+# Test files
+static/test-glassmorphism.html
+public/test-glassmorphism.html
+
+# Temporary files
+*.tmp
+*.temp
+
+# Hugo server lock file
+.hugo_build.lock
+
+# Local development
+.vscode/settings.json
+.vscode/launch.json
+
+# Backup files
+*.bak
+*~
+
+# Logs
+*.log
