--- a/hugo.toml
+++ b/hugo.toml
@@ -4,14 +4,29 @@ languageCode = "zh-Hans"
 title = '你也不是我的救赎'
 theme = 'dream'
 
+# Hugo模块配置
+[module]
+[[module.imports]]
+path = "github.com/hugomods/encrypt"
+
+# 分页设置 - 新版Hugo格式
+[pagination]
+pagerSize = 10
+path = "page"
+
+# 构建设置 - 允许显示未来日期的文章
+buildFuture = true
+buildExpired = true
+buildDrafts = false
+
 enableGitInfo = true
 enableRobotsTXT = true
 
 hasCJKLanguage = true
 
-# 摘要设置 - 限制主页文章显示长度
-summaryLength = 100
-# 也可以使用<!--more-->手动截断
+# 摘要设置 - 优化首页加载速度
+summaryLength = 80
+# 使用<!--more-->手动截断或自动生成纯文本摘要
 
 [markup]
 [markup.goldmark.parser]
@@ -23,6 +38,16 @@ block = true
 [markup.goldmark.renderer]
 unsafe = true
 
+# 摘要渲染设置 - 移除图片以提升首页加载速度
+[markup.goldmark.extensions]
+strikethrough = true
+linkify = true
+linkifyProtocol = "https"
+table = true
+taskList = true
+definitionList = true
+footnote = true
+typographer = false
 [markup.goldmark.extensions.passthrough]
 enable = true
 
@@ -45,15 +70,20 @@ tabWidth = 4
 category = "categories"
 tag = "tags"
 
+# 关闭Disqus评论系统
+# [services]
+# [services.disqus]
+# shortname = "cai6-blog"
+
 [params]
 # zenMode = true  # 暂时关闭zen模式以展示更多功能
 zenMode = false  # 关闭zen模式以显示完整功能
 
 lightTheme = "emerald"
-darkTheme = "forest"
+darkTheme = "dracula"
 
 backgroundImage = "img/global-background.jpg"
-backgroundImageDark = "img/global-background.jpg"
+backgroundImageDark = "img/global-background-dark.png"
 
 images = ["img/global-background.jpg"]
 
@@ -69,7 +99,19 @@ footerBottomText = "© 2024 cai6 | 博客分享技术与生活 | 保持好奇，
 rss = true
 
 # 启用GitHub Issues评论系统
-utterancesRepo = "pengcai6/hugo-blog"
+# utterancesRepo = "pengcai6/hugo-blog"  # 如果使用Disqus可以注释掉这行
+
+# Twikoo评论系统配置
+[params.twikoo]
+enabled = true
+envID = "https://twikoo-pen.netlify.app/.netlify/functions/twikoo"  # 请替换为你的Twikoo环境ID
+region = "ap-shanghai"  # 腾讯云区域，如ap-shanghai, ap-guangzhou等
+lang = "zh-CN"  # 语言设置
+
+# 内容加密配置
+[params.encrypt]
+password = "cai6blog2025"  # 默认密码，可以自定义
+storage = "session"  # session 或 local
 
 email = "pengcai6@gmail.com"
 
