feat: 配置GitHub Pages自动部署
- 添加Hugo GitHub Actions工作流
- 集成HugoMods encrypt支持
- 更新baseURL为自定义域名 hugo.8888-8888.me
- 更新CNAME文件指向新域名
- 支持自动构建、加密和部署流程

工作流特性:
- Hugo v0.148.2 with extended features
- Go环境支持encrypt CLI
- 自动内容加密处理
- GitHub Pages部署
- 支持Hugo modules和主题

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://www.cai094.top/'
+baseURL = 'https://hugo.8888-8888.me/'
 defaultContentLanguage = "zh"
 languageCode = "zh-Hans"
 title = '你也不是我的救赎'
