feat: 添加PWA (Progressive Web App) 支持
✨ 新功能:
- 添加 Hugo PWA 模块支持
- 实现离线访问功能
- 支持安装到主屏幕
- 智能资源预缓存策略

🔧 技术实现:
- 导入 github.com/hugomods/pwa 模块
- 配置 Web App Manifest 和 Service Worker
- 添加自定义离线页面设计
- 设置多尺寸应用图标自动生成
- 优化缓存策略 (生产: cache-first, 开发: network-first)

📱 PWA 功能:
- 🔄 离线浏览已缓存内容
- 📱 可安装为原生应用
- ⚡ 预缓存关键页面和资源
- 🎨 全屏原生应用体验

🛠️ 配置文件:
- 更新 hugo.toml 添加 PWA 参数
- 新增 config/development/hugo.toml 开发环境配置
- 修改 layouts/_default/baseof.html 集成 PWA
- 创建 layouts/_default/index.offline.html 自定义离线页面

📚 文档:
- 添加 PWA_测试指南.md 使用说明

--- a/hugo.toml
+++ b/hugo.toml
@@ -9,10 +9,17 @@ theme = 'dream'
 [[module.imports]]
 path = "github.com/hugomods/encrypt"
 
+[[module.imports]]
+path = "github.com/hugomods/pwa"
+
 # 分页设置 - 新版Hugo格式
 [pagination]
 pagerSize = 10
 path = "page"
+
+# 输出格式配置 - 添加 PWA 支持
+[outputs]
+home = ["HTML", "RSS", "Offline", "WebAppManifest"]
 
 # 构建设置 - 允许显示未来日期的文章
 buildFuture = true
@@ -112,6 +119,53 @@ lang = "zh-CN"  # 语言设置
 [params.encrypt]
 password = "cai6blog2025"  # 默认密码，可以自定义
 storage = "session"  # session 或 local
+
+# PWA配置
+[params.pwa]
+debug = false
+icon_path = "img/personal/avatar.png"
+icon_sizes = [48, 64, 128, 144, 256, 512]
+offline_image = "img/personal/avatar.png"
+
+# PWA缓存策略配置
+[params.pwa.caches]
+[params.pwa.caches.font]
+max_age = 2592000
+origins = []
+strategy = "cache-first"
+
+[params.pwa.caches.image]
+max_age = 2592000
+origins = []
+strategy = "cache-first"
+
+[params.pwa.caches.script]
+max_age = 2592000
+origins = []
+strategy = "cache-first"
+
+[params.pwa.caches.style]
+max_age = 2592000
+origins = []
+strategy = "cache-first"
+
+# PWA manifest配置
+[params.pwa.manifest]
+background_color = "#1a1a1a"
+theme_color = "#4f46e5"
+name = "cai6的技术博客"
+short_name = "cai6博客"
+description = "蔡的小破站 - 记录技术学习与生活感悟，分享编程智慧"
+
+# 自定义预缓存文件
+[[params.pwa.precaches]]
+url = "/"
+
+[[params.pwa.precaches]]
+url = "/posts/"
+
+[[params.pwa.precaches]]
+url = "/about/"
 
 email = "pengcai6@gmail.com"
 
